force-app/main/default/objects/Product2/fields/Brand_Alias__c.field-meta.xml
<CustomField>
    <fullName>Brand_Alias__c</fullName>
    <label>Brand Alias</label>
    <type>Text</type>
    <length>80</length>
</CustomField>