force-app/main/default/objects/Product2/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <label>Sub Brand</label>
    <type>Text</type>
    <length>80</length>
</CustomField>